--- a/composer.json
+++ b/composer.json
@@ -11,6 +11,7 @@
     "require": {
         "php": "^8.2",
         "blade-ui-kit/blade-heroicons": "^2.6",
+        "codeat3/blade-google-material-design-icons": "^1.20",
         "laravel-lang/lang": "^15.17",
         "laravel/framework": "^11.31",
         "laravel/sanctum": "^4.0",
