--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.2",
+        "ably/ably-php": "^1.1",
         "blade-ui-kit/blade-heroicons": "^2.6",
         "codeat3/blade-google-material-design-icons": "^1.20",
         "laravel-lang/lang": "^15.17",
