--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "dependencies": {
         "@alpinejs/mask": "^3.14.9",
         "@fortawesome/fontawesome-free": "^6.7.2",
+        "ably": "^2.9.0",
         "apexcharts": "^4.7.0",
         "flowbite": "^3.1.2",
         "select2": "^4.1.0-rc.0"
