--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
         "@fortawesome/fontawesome-free": "^6.7.2",
         "ably": "^2.9.0",
         "apexcharts": "^4.7.0",
+        "emoji-picker-element": "^1.26.3",
         "flowbite": "^3.1.2",
         "select2": "^4.1.0-rc.0"
     }
